# vemt-bot-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  test-question.json
documents/: config.md  entry.md  init.md
documents/admin/: config-question.md  config.md
documents/manager/: features.md  query-answer.md  query-user.md
lib/json11/: CMakeLists.txt
lib/logger/: CMakeLists.txt
lib/logger/src/: Logger.cpp  Logger.hpp
lib/logger/test/: main.cpp
sleepy-discord/include/sleepy_discord/: attachment.h  channel.h  client.h  common_return_types.h  cpr_session.h  custom_session.h  discord_object_interface.h  embed.h  error.h  gateway.h  http.h  invite.h  json_wrapper.h  message.h  permissions.h  server.h  sleepy_discord.h  snowflake.h  standard_config.h  standard_config_header.h  timer.h  user.h  uwebsockets_websocket.h  voice.h  webhook.h  websocketpp_websocket.h
sleepy-discord/sleepy_discord/: CMakeLists.txt  asignments_client.cpp  attachment.cpp  channel.cpp  client.cpp  cpr_session.cpp  default_functions.cpp  discord_object_interface.cpp  embed.cpp  endpoints.cpp  gateway.cpp  http.cpp  invite.cpp  json_wrapper.cpp  message.cpp  permissions.cpp  sd_error.cpp  server.cpp  timer.cpp  user.cpp  uwebsockets_websocket.cpp  voice.cpp  webhook.cpp  websocketpp_websocket.cpp
src/: BaseTable.cpp  BaseTable.hpp  CodeCvt.cpp  CodeCvt.hpp  Phase.cpp  Phase.hpp  main-db.cpp  main.cpp  scheme.sql
src/bot/: Answer.cpp  Answer.hpp  AnswerType.cpp  AnswerType.cppX  AnswerType.hpp  AnswerType.hppX  Client.cpp  Client.hpp  Config.cpp  Config.hpp  Entry.cpp  Entry.hpp  EventProcessBase.cpp  EventProcessBase.hpp  Init.cpp  Init.hpp  OnEditMessageProcess.cpp  OnEditMessageProcess.hpp  OnMessageProcess.cpp  OnMessageProcess.hpp  Process.cpp  Process.hpp  Question.cpp  Question.hpp  QuestionItem.cpp  QuestionItem.hpp  QuestionItemModel.hpp  Reset.cpp  Reset.hpp  Settings.cpp  Settings.hpp  Shutdown.cpp  Shutdown.hpp
src/db/: AnswerModel.cpp  AnswerModel.cppX  AnswerModel.hpp  AnswersTable.cpp  AnswersTable.cppX  AnswersTable.hpp  AnswersTable.hppX  BaseTable.cpp  BaseTable.hpp  DatabaseException.cpp  DatabaseException.hpp  EntriesTable.cpp  EntriesTable.cppX  EntriesTable.hpp  EntriesTable.hppX  EntryModel.cpp  EntryModel.hpp  Makefile  QuestionItemModel.cpp  QuestionItemModel.hpp  QuestionItemsTable.cpp  QuestionItemsTable.hpp  RegistryTable.cpp  RegistryTable.hpp  ResultModel.cpp  ResultModel.hpp  ResultsTable.cpp  ResultsTable.hpp  Statement.cpp  Statement.hpp  SubmissionModel.cpp  SubmissionModel.hpp  SubmissionsTable.cpp  SubmissionsTable.hpp  Transaction.cpp  Transaction.hpp  develop.sqlite3  main-db.cpp  sqlite3_test.cpp
src/db/type/: AnswerType.cpp  AnswerType.hpp  BoolParam.cpp  DatetimeParam.cpp  IntParam.cpp  Param.cpp  Param.hpp  StringParam.cpp  WstringParam.cpp
src/type/: AnswerType.cpp  AnswerType.hpp  BoolParam.cpp  BoolParam.hpp  DatetimeParam.cpp  DatetimeParam.hpp  IntParam.cpp  IntParam.hpp  Param.cpp  Param.hpp  Phase.cpp  Phase.hpp  StringParam.cpp  StringParam.hpp  Type.hpp  WstringParam.cpp  WstringParam.hpp
src/util/: Logger.cpp  json11.cpp  json11.hpp  string_util.cpp  string_util.hpp
